--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.2.2",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
